# raycasting-occlusion

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/configs/: simple.toml  simple.yaml
occ-raycasting/: Cargo.toml
occ-raycasting-cli/: Cargo.toml
occ-raycasting-cli/src/: main.rs  options.rs
occ-raycasting/src/: config.rs  error.rs  executor.rs  lib.rs  stats.rs  utils.rs
occ-raycasting/src/math/: aabb.rs  intersection.rs  mod.rs  plane.rs  ray.rs
occ-raycasting/src/rasterizer/: frame.rs  mod.rs  rasterizer.rs  rasterizer_culler.rs
occ-raycasting/src/rasterizer_culler/: mod.rs  rasterizer.rs
occ-raycasting/src/raycaster/: mod.rs  naive_raycaster.rs
occ-raycasting/src/scene/: io.rs  io_utils.rs  mod.rs
occ-raycasting/src/spatial/: bvh.rs  mod.rs
test_data/: triangle.off
