[package]
name = "occ-raycasting"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
cad_import = "0.3"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
nalgebra-glm = { version = "0.19", features = ["serde-serialize"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_yaml = "0.9"
rand = "0.9"
rand_chacha = "0.9"
